--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "assignment",
+  "name": "mongoose-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "typescript with mongoose for express server",
   "main": "index.js",
   "scripts": {
+    "start:prod": "node ./dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
